# Cellular_automata

./: CMakeLists.txt  FeatureNotes.md  README.md  filetypes.xml  find.xml  github.xml  textmate_os.xml  updates.xml  vim_settings.xml
cmake/: FindSDL2TTF.cmake
codestyles/: Default.xml
src/: cgl.cpp  cgl.h  colors.cpp  colors.h  display.cpp  display.h  event.cpp  event.h  game.cpp  game.h  main.cpp  node.h  textDisplay.cpp  textDisplay.h  unit.h
